--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@tiptap/starter-kit": "^2.1.8",
     "@tiptap/vue-3": "^2.1.8",
     "lodash": "^4.17.21",
+    "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
