--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,8 @@
         "start": "node ./index.js"
     },
     "dependencies": {
-        "body-parser": "^1.20.0",
+        "body-parser": "^1.20.2",
         "cors": "^2.8.5",
-        "express": "^4.18.1",
-        "node-fetch": "^2.6.7"
+        "express": "^4.18.2"
     }
 }
