--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
+        "build": "vite build --mode development",
         "production-build": "vite build --mode production",
         "preview": "vite preview"
     },
@@ -13,21 +13,21 @@
         "@fortawesome/fontawesome-svg-core": "^6.5.1",
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/vue-fontawesome": "^3.0.5",
-        "@nostr-dev-kit/ndk": "^2.3.0",
+        "@nostr-dev-kit/ndk": "^2.3.1",
         "@tiptap/pm": "^2.1.13",
         "@tiptap/starter-kit": "^2.1.13",
         "@tiptap/vue-3": "^2.1.13",
         "lodash": "^4.17.21",
         "pinia": "^2.1.7",
-        "vue": "^3.3.12",
+        "vue": "^3.3.13",
         "vue-router": "^4.2.5"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^4.5.2",
         "autoprefixer": "^10.4.16",
-        "daisyui": "^4.4.20",
+        "daisyui": "^4.4.23",
         "postcss": "^8.4.32",
-        "tailwindcss": "^3.3.6",
+        "tailwindcss": "^3.4.0",
         "vite": "^5.0.10"
     }
 }
