add nip 44 support

--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
         "dompurify": "^3.0.9",
         "lodash": "^4.17.21",
         "markdown-it": "^14.0.0",
+        "nostr-tools": "^2.3.2",
         "pinia": "^2.1.7",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0"
