fix nip46 login

--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,12 @@
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
         "@fortawesome/vue-fontawesome": "^3.0.6",
-        "@nostr-dev-kit/ndk": "^2.8.2",
+        "@nostr-dev-kit/ndk": "^2.10.0",
         "dompurify": "^3.1.5",
         "lodash": "^4.17.21",
         "markdown-it": "^14.1.0",
-        "nostr-tools": "^2.5.2",
+        "nostr-login": "^1.5.2",
+        "nostr-tools": "^2.7.2",
         "pinia": "^2.1.7",
         "vue": "^3.4.29",
         "vue-router": "^4.3.3"
