--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@replit/codemirror-vim": "^6.2.1",
+        "@codemirror/basic-setup": "^0.20.0",
+        "@codemirror/commands": "^6.6.1",
+        "@codemirror/state": "^6.4.1",
+        "@codemirror/view": "^6.33.0",
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
         "@fortawesome/free-solid-svg-icons": "^6.5.2",
         "@fortawesome/vue-fontawesome": "^3.0.6",
@@ -17,18 +22,18 @@
         "dompurify": "^3.1.5",
         "lodash": "^4.17.21",
         "markdown-it": "^14.1.0",
-        "nostr-login": "^1.5.2",
+        "nostr-login": "^1.6.5",
         "nostr-tools": "^2.7.2",
-        "pinia": "^2.1.7",
-        "vue": "^3.4.29",
-        "vue-router": "^4.3.3"
+        "pinia": "^2.2.2",
+        "vue": "^3.5.5",
+        "vue-router": "^4.4.5"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^5.0.5",
-        "autoprefixer": "^10.4.19",
-        "daisyui": "^4.12.2",
-        "postcss": "^8.4.38",
-        "tailwindcss": "^3.4.4",
-        "vite": "^5.3.1"
+        "@vitejs/plugin-vue": "^5.1.3",
+        "autoprefixer": "^10.4.20",
+        "daisyui": "^4.12.10",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.11",
+        "vite": "^5.4.5"
     }
 }
